--- a/content/half-cat.toml
+++ b/content/half-cat.toml
@@ -1,6 +1,6 @@
 title = "Nansen cuts a cat in two"
-date = 2015-11-07
-image = "img/half-cat.jpg"
+date = 2015-11-07T00:00:00Z
+image = "assets/img/half-cat.jpg"
 summary = """
 Nansen saw the monks of the eastern and western halls fighting over a baby cat. He seized the cat and said, "If (any of) you can say (a word of Zen), you can spare the cat. Otherwise I will kill it."
 """
